--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,7 +27,7 @@ a {
 
 button {
   transition: 0.2s;
-  font-family: Montserrat;
+  font-family: Montserrat !important;
   &:hover {
     transform: translateY(-2px);
     cursor: pointer;
