--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Montserrat;
+  font-family: Montserrat !important;
 }
 
 a {
@@ -22,7 +22,7 @@ a {
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: Montserrat;
+  font-family: Montserrat !important;
 }
 
 button {
